# Book_of_Spells

./: .gitignore  README.md  README.txt  newBranch.txt  secondFile.md
111_ex/Letter_box/: Makefile  main.cpp  prog
AppleScript/: launch_iterm
Bash/: brew_update.sh  md_compile.sh  texcomp.sh  texinit.sh  work_log.sh
DataS/AVL/: AVL.cpp  AVL.hpp  Makefile  main  main.cpp  main.hpp
DataS/AVL/main.dSYM/Contents/Resources/DWARF/: main
DataS/Q/: Makefile  queue.c  queue.h
DataS/fib_hash/: Cargo.toml
DataS/fib_hash/src/: main.rs
DataS/fib_hash/src/tree/: mod.rs
DataS/mlfq/: Cargo.toml
DataS/mlfq/src/: main.rs  queue.rs
DataS/mlfq/src/queue/: tests.rs
Data_struct/Q/: queue.c  queue.h
Rust/work_log/: Cargo.toml  driver.sh  log.txt
Rust/work_log/src/: .hours.rs.swp  cl_parse.rs  fts.rs  hours.rs  lib.rs  logio.rs  main.rs  total.rs
Rust/work_log/src/hours/: .hours_sub_total.rs.swp  add_times.rs  err.rs  find.rs  hours_sub_total.rs  mod.rs  tests.rs
Rust/work_log/src/logio/: mod.rs
Scheme/: hello_world.scm
SortAlg/quick/: Cargo.toml
SortAlg/quick/src/: lib.rs
SortAlg/quick/src/q_alg/: mod.rs
easy/coin_counter/: READ_ME.md
easy/p_gen/: main.cpp  run
