[package]
name = "work_log"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# version 0.1.0
## + login
## + logout
## + truncate

# version 0.2.0
## - truncate
## + archive for each new month
## + sub total
## + file wide total

# version 0.2.1
## cleanup code

[dependencies]
